--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python = "^3.11"
 pyyaml = "^6.0.1"
 
 [tool.poetry.scripts]
-main = "jsque.cli:main"
+jsq = "jsque.cli:main"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.2"
